--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,7 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  new: MyString
-
+  name: MyString
+  email: MyEmail
 two:
-  new: MyString
+  name: MyString
+  email: MyEmail
