--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,8 +1,1 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  name: MyString
-  email: MyEmail
-two:
-  name: MyString
-  email: MyEmail
+#empty
