--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,9 +1,19 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  content: MyText
-  user: one
+crabs:
+  content: "The immortality of crabs has always been a subject that piques my interest, however up until now I was not able to put this into words correctly. Now I was able to, and you will learn about them"
+  created_at: <%= 10.minutes.ago %>
 
-two:
-  content: MyText
-  user: two
+
+apples:
+  content: "An apple a day keeps the doctor away"
+  created_at: <%= 20.minutes.ago %>
+  
+blablah:
+  content: "bla bla bla bla bla bla bla"
+  created_at: <%= 2.weeks.ago %>
+  
+most_recent:
+  content: "most recent post here"
+  created_at: <%= Time.zone.now %>
+  
