--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -3,17 +3,20 @@
 crabs:
   content: "The immortality of crabs has always been a subject that piques my interest, however up until now I was not able to put this into words correctly. Now I was able to, and you will learn about them"
   created_at: <%= 10.minutes.ago %>
+  user: michael
 
 
 apples:
   content: "An apple a day keeps the doctor away"
   created_at: <%= 20.minutes.ago %>
+  user: mary
   
 blablah:
   content: "bla bla bla bla bla bla bla"
   created_at: <%= 2.weeks.ago %>
+  user: michael
   
 most_recent:
   content: "most recent post here"
   created_at: <%= Time.zone.now %>
-  
+  user: mary
