first working post delete test

--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,22 +1,26 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 crabs:
+  title: "Hello crabs"
   content: "The immortality of crabs has always been a subject that piques my interest, however up until now I was not able to put this into words correctly. Now I was able to, and you will learn about them"
   created_at: <%= 10.minutes.ago %>
   user: michael
 
 
 apples:
+  title: "Hello apples"
   content: "An apple a day keeps the doctor away"
   created_at: <%= 20.minutes.ago %>
   user: mary
   
 blablah:
+  title: "Hello bla"
   content: "bla bla bla bla bla bla bla"
   created_at: <%= 2.weeks.ago %>
   user: michael
   
 most_recent:
+  title: "Hello most recent"
   content: "most recent post here"
   created_at: <%= Time.zone.now %>
   user: mary
