changes route for last blog post (temp change)

--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,5 @@ production:
   <<: *default
   adapter: postgresql
   encoding: unicode
-  database: production
+  database: rails-app
   pool: 5
-  username: blog
-  password:
