mod database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,6 +23,6 @@ test:
 production:
   <<: *default
   adapter: postgresql
-  encoding: unicode
-  database: rails-app
-  pool: 5
+  host: localhost
+  username: user
+  database: app-dev
