--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,9 @@ public/uploads/*
 #ignore .env
 .env
 
+#ignore /public - Files are served from a cdn in production anyways
+/public
+
+
 #ignore database.yml
 config/database.yml
